[package]
name = "teamspeak-repoker"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3.1"
env_logger = "0.9"
log = "0.4"
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }
